switched pic to column to prevent squish

--- a/static/style.css
+++ b/static/style.css
@@ -305,10 +305,19 @@ a:hover {
         margin-right: 2%;
     }    
 
-    #orbit-pic img {
-        width: 100px;
-        height: auto;
+    #container-main-project {
+        flex-direction: column;
+        align-items: center;
     }
+
+    #project-header-container {
+        text-align: center;
+    }
+
+    /* #orbit-pic {
+        justify-content: center;
+        align-items: center;
+    } */
 
 
   }
